made collapsible elements easier to distinguish

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,3 +22,4 @@ Nov 16, 2022 · forked, rebased theme from Gitea's default theme, adopted colors
 
 Nov 17, 2022 · changed row highlight color
 Nov 18, 2022 · made pull requests and new releases menu item and .diff-detail-box background match --color-background
+Nov 29, 2022 · made collapsible elements easier to distinguish from main body
