--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,3 +23,4 @@ Nov 16, 2022 · forked, rebased theme from Gitea's default theme, adopted colors
 Nov 17, 2022 · changed row highlight color
 Nov 18, 2022 · made pull requests and new releases menu item and .diff-detail-box background match --color-background
 Nov 29, 2022 · made collapsible elements easier to distinguish from main body
+Dec 12, 2022 · fixed monospace font to display SF Mono in Safari on macOS
