--- a/CHANGELOG
+++ b/CHANGELOG
@@ -25,3 +25,4 @@ Nov 18, 2022 · made pull requests and new releases menu item and .diff-detail-b
 Nov 29, 2022 · made collapsible elements easier to distinguish from main body
 Dec 12, 2022 · fixed monospace font to display SF Mono in Safari on macOS
 Dec 19, 2022 · for clone url border, used same color as surrounding buttons' border
+Dec 20, 2022 · ran `make generate-images` to generate logo
