--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,3 +27,4 @@ Dec 12, 2022 · fixed monospace font to display SF Mono in Safari on macOS
 Dec 19, 2022 · for clone url border, used same color as surrounding buttons' border
 Dec 20, 2022 · ran `make generate-images` to generate logo
 Dec 21, 2022 · regenerated images and pruned redundant ones
+Jan 15, 2023 · removed little color preview squares
