remove background color of alternating table rows

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -28,3 +28,4 @@ Dec 19, 2022 · for clone url border, used same color as surrounding buttons' bo
 Dec 20, 2022 · ran `make generate-images` to generate logo
 Dec 21, 2022 · regenerated images and pruned redundant ones
 Jan 15, 2023 · removed little color preview squares
+Feb 6, 2023 · removed background color of alternating table rows, since distracting if such rows contain codes
