--- a/CHANGELOG
+++ b/CHANGELOG
@@ -29,3 +29,4 @@ Dec 20, 2022 · ran `make generate-images` to generate logo
 Dec 21, 2022 · regenerated images and pruned redundant ones
 Jan 15, 2023 · removed little color preview squares
 Feb 6, 2023 · removed background color of alternating table rows, since distracting if such rows contain codes
+Feb 28, 2023 · added "auto" to THEMES list
