remove highlight behind some codes obscuring them

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -32,3 +32,4 @@ Feb 6, 2023 · removed background color of alternating table rows, since distrac
 Feb 28, 2023 · added "auto" to THEMES list
 Mar 1, 2023 · added dark theme and auto theme to mitigate current and any future issues with Dark Reader
 May 3, 2023 · `THEME_COLOR_META_TAG = none` no longer required, as of Gitea 1.19.2
+Jun 4, 2023 · remove highlight behind some codes that obscured them
