--- a/CHANGELOG
+++ b/CHANGELOG
@@ -33,3 +33,4 @@ Feb 28, 2023 · added "auto" to THEMES list
 Mar 1, 2023 · added dark theme and auto theme to mitigate current and any future issues with Dark Reader
 May 3, 2023 · `THEME_COLOR_META_TAG = none` no longer required, as of Gitea 1.19.2
 Jun 4, 2023 · remove highlight behind some codes that obscured them
+Jun 5, 2023 · hide center border more between table header columns, and remove tiny empty spaces between table header corner and table border
