--- a/CHANGELOG
+++ b/CHANGELOG
@@ -34,3 +34,4 @@ Mar 1, 2023 · added dark theme and auto theme to mitigate current and any futur
 May 3, 2023 · `THEME_COLOR_META_TAG = none` no longer required, as of Gitea 1.19.2
 Jun 4, 2023 · remove highlight behind some codes that obscured them
 Jun 5, 2023 · hide center border more between table header columns, and remove tiny empty spaces between table header corner and table border
+Jun 7, 2023 · rebased theme
