--- a/CHANGELOG
+++ b/CHANGELOG
@@ -36,3 +36,4 @@ Jun 4, 2023 · remove highlight behind some codes that obscured them
 Jun 5, 2023 · hide center border more between table header columns, and remove tiny empty spaces between table header corner and table border
 Jun 7, 2023 · rebased theme
 Jun 15, 2023 · fixed theme regressions
+Jul 14, 2023 · rebased theme
