--- a/CHANGELOG
+++ b/CHANGELOG
@@ -34,6 +34,7 @@ Mar 1, 2023 · added dark theme and auto theme to mitigate current and any futur
 May 3, 2023 · `THEME_COLOR_META_TAG = none` no longer required, as of Gitea 1.19.2
 Jun 4, 2023 · remove highlight behind some codes that obscured them
 Jun 5, 2023 · hide center border more between table header columns, and remove tiny empty spaces between table header corner and table border
-Jun 7, 2023 · rebased theme
+Jun 7, 2023 · rebased theme on main commit 1ea5c8b0ff5ca9f81a06b195a7dff870d784cb02
 Jun 15, 2023 · fixed theme regressions
-Jul 14, 2023 · rebased theme
+Jul 14, 2023 · rebased theme on version 1.19.4
+Aug 3, 2023 · rebased theme on version 1.20.2
