--- a/CHANGELOG
+++ b/CHANGELOG
@@ -38,3 +38,4 @@ Jun 7, 2023 · rebased theme on main commit 1ea5c8b0ff5ca9f81a06b195a7dff870d784
 Jun 15, 2023 · fixed theme regressions
 Jul 14, 2023 · rebased theme on version 1.19.4
 Aug 3, 2023 · rebased theme on version 1.20.2
+Aug 8, 2023 · simplified and refined colors, and fixed reopen issue button
