--- a/CHANGELOG
+++ b/CHANGELOG
@@ -39,3 +39,4 @@ Jun 15, 2023 · fixed theme regressions
 Jul 14, 2023 · rebased theme on version 1.19.4
 Aug 3, 2023 · rebased theme on version 1.20.2
 Aug 8, 2023 · simplified and refined colors, and fixed reopen issue button
+Aug 9, 2023 · added option to display kid-friendly Comic fonts
