corrected some button colors

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -40,3 +40,4 @@ Jul 14, 2023 · rebased theme on version 1.19.4
 Aug 3, 2023 · rebased theme on version 1.20.2
 Aug 8, 2023 · simplified and refined colors, and fixed reopen issue button
 Aug 9, 2023 · added option to display kid-friendly Comic fonts
+Aug 31, 2023 · corrected colors of send account recovery email, save, search, and clone buttons
